--- a/MULT324/.sdas.html
+++ b/MULT324/.sdas.html
@@ -1,11 +1,101 @@
-<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet" />
-<script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
-<script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
+<meta
+  name="description"
+  content="&#161;El hotel ideal para tu viaje! Todas las categor&#237;as y las mejores cadenas hoteleras. Compar&#225; precios y reserv&#225; en simples pasos tu alojamiento."
+/>
+<script
+  crossorigin
+  src="https://unpkg.com/react@18/umd/react.production.min.js"
+></script>
+<script
+  crossorigin
+  src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"
+></script>
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-<link href="https://multitravelcom.github.io/components/MULT324/style.css" rel="stylesheet" />
-<div class="container__" id="root">
-</div>
-<script type="text/babel" src="https://multitravelcom.github.io/components/MULT324/index.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/glider-js@1.7.8/glider.min.js"></script>
-<script type="text/babel" src="https://multitravelcom.github.io/components/MULT168/Modal/index.js"></script>
-<link href="https://multitravelcom.github.io/components/MULT168/Modal/style.css" rel="stylesheet" />
+<link
+  rel="stylesheet"
+  type="text/css"
+  href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
+/>
+<script
+  type="text/javascript"
+  src="https://cdn.jsdelivr.net/npm/toastify-js"
+></script>
+<link
+  href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css"
+  rel="stylesheet"
+/>
+<script src="https://multitravelcom.github.io/style/General/addHeaderLinks.js"></script>
+<script
+  type="text/babel"
+  src="https://multitravelcom.github.io/components/MULT168/Modal/bannerResult.js"
+></script>
+<script
+  type="text/babel"
+  src="https://multitravelcom.github.io/components/MULT168/Modal/index.js"
+></script>
+<link
+  href="https://multitravelcom.github.io/style/General/style.css"
+  rel="stylesheet"
+/>
+<link
+  href="https://multitravelcom.github.io/style/Hotels/style.css"
+  rel="stylesheet"
+/>
+<link
+  href="https://multitravelcom.github.io/components/MULT168/Modal/style.css"
+  rel="stylesheet"
+/>
+<script
+  type="text/babel"
+  src="https://multitravelcom.github.io/components/MULT263/index.js"
+></script>
+<link
+  href="https://multitravelcom.github.io/components/MULT263/style.css"
+  rel="stylesheet"
+/>
+<script src="https://multitravelcom.github.io/components/MULT247/index.js"></script>
+<link
+  href="https://multitravelcom.github.io/components/MULT247/style.css"
+  rel="stylesheet"
+/>
+<script src="https://multitravelcom.github.io/components/MULT245/mutation-summary.js"></script>
+<script src="https://multitravelcom.github.io/components/MULT249/index.js"></script>
+<script id="mcjs">
+  !(function (c, h, i, m, p) {
+    (m = c.createElement(h)),
+      (p = c.getElementsByTagName(h)[0]),
+      (m.async = 1),
+      (m.src = i),
+      p.parentNode.insertBefore(m, p);
+  })(
+    document,
+    "script",
+    "https://chimpstatic.com/mcjs-connected/js/users/d09ee86703b1761e8337397e9/6e305f08d149ab3c55d2d9573.js"
+  );
+</script>
+<link
+  href="https://multitravelcom.github.io/components/MULT258/style.css"
+  rel="stylesheet"
+/>
+<script
+  type="text/babel"
+  src="https://multitravelcom.github.io/components/MULT258/index.js"
+></script>
+<script
+  type="text/babel"
+  src="https://multitravelcom.github.io/components/MULT245/index.js"
+></script>
+<script src="https://multitravelcom.github.io/components/MULT245/index.js"></script>
+<script
+  type="text/babel"
+  src="https://multitravelcom.github.io/components/MULT245/modalShare.js"
+></script>
+<link
+  href="https://multitravelcom.github.io/components/MULT245/style.css"
+  rel="stylesheet"
+/>
+<script src="https://multitravelcom.github.io/components/MULT269/index.js"></script>
+<link
+  href="https://multitravelcom.github.io/components/MULT269/style.css"
+  rel="stylesheet"
+/>
