--- a/MULT324/.sdas.html
+++ b/MULT324/.sdas.html
@@ -1,6 +1,10 @@
 <meta
   name="description"
-  content="&#161;El hotel ideal para tu viaje! Todas las categor&#237;as y las mejores cadenas hoteleras. Compar&#225; precios y reserv&#225; en simples pasos tu alojamiento."
+  content="&#161;El hotel m&#225;s ideal para tu viaje! Todas las categor&#237;as y las mejores cadenas hoteleras. Compar&#225; precios y reserv&#225; en simples pasos tu alojamiento."
+/>
+<meta
+  property="og:image"
+  content="https://multitravelcom.github.io/MT/multitravel.webp"
 />
 <script
   crossorigin
@@ -21,6 +25,10 @@
   src="https://cdn.jsdelivr.net/npm/toastify-js"
 ></script>
 <link
+  href="https://multitravelcom.github.io/style/General/style.css"
+  rel="stylesheet"
+/>
+<link
   href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css"
   rel="stylesheet"
 />
@@ -33,10 +41,6 @@
   type="text/babel"
   src="https://multitravelcom.github.io/components/MULT168/Modal/index.js"
 ></script>
-<link
-  href="https://multitravelcom.github.io/style/General/style.css"
-  rel="stylesheet"
-/>
 <link
   href="https://multitravelcom.github.io/style/Hotels/style.css"
   rel="stylesheet"
@@ -97,5 +101,14 @@
 <script src="https://multitravelcom.github.io/components/MULT269/index.js"></script>
 <link
   href="https://multitravelcom.github.io/components/MULT269/style.css"
+  rel="stylesheet"
+/>
+<link
+  href="https://multitravelcom.github.io/style/Flight/style.css"
+  rel="stylesheet"
+/>
+<script src="https://multitravelcom.github.io/components/MULT297/index.js"></script>
+<link
+  href="https://multitravelcom.github.io/components/MULT297/style.css"
   rel="stylesheet"
 />
