--- a/MULT324/.sdas.html
+++ b/MULT324/.sdas.html
@@ -107,7 +107,10 @@
   href="https://multitravelcom.github.io/style/Flight/style.css"
   rel="stylesheet"
 />
-<script src="https://multitravelcom.github.io/components/MULT297/index.js"></script>
+<script
+  type="text/babel"
+  src="https://multitravelcom.github.io/components/MULT297/index.js"
+></script>
 <link
   href="https://multitravelcom.github.io/components/MULT297/style.css"
   rel="stylesheet"
